# samoyes_backend

./: .gitignore  f  main.py  pyproject.toml  readme.md  requirements.txt
apps/auth/: api.py  models.py  schemas.py
apps/categorize/: api.py  models.py  schemas.py
apps/user/: api.py  models.py  schemas.py
fast_api/fast_api/: exceptions.py  pyproject.toml  readme.md  sql.py
fast_api/fast_api/apps/auth/: api.py  schemas.py
fast_api/fast_api/project/: __init__.py  api.py  app.py  exception.py  settings.py
fast_api/fast_api/utils/pydantic/response/: response.py
fast_api/fast_api/utils/sql_alchemy/: base_model.py  connect.py  manage.py  model.py  query_set.py
project/: api.py  app.py  exception.py  router.py  settings.py
utils/: snowflake_util.py  tests.py
utils/Sqlalchemy/: basemodel.py  connect.py  manager.py  query.py
utils/django_utils/auth/: auth.py  permission.py
utils/django_utils/model/: manager.py  model_mixin.py  model_util.py
utils/fastapi_utils/auth/: auth.py
utils/fastapi_utils/debug/: debug.py
utils/pydantic_utils/: response.py
