[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Chococup",email = "Qiaokebei123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "mysql (>=0.0.3,<0.0.4)",
    "short-unique-id (>=0.2.1,<0.3.0)",
    "pymysql (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
